# rumor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.yaml  rumor.cabal  stack.yaml  watch-doctests.sh  watch-smokes.sh  watch.sh
doc/: Compile.md
doctests/: Main.hs
goldentests/: Main.hs
goldentests/samples/: action.rumor-interactive
hstest/: README.md  main.c  main.h
smokes/: Main.hs
smokes/examples/: bloom-into-you.golden  bloom-into-you.rumor  gender-dysphoria.golden  gender-dysphoria.rumor
src/: Prelude.hs  Rumor.def  Rumor.hs
src/Rumor/: ClearFlag.hs  Compiler.hs  Expression.hs  FFI.hs  Internal.hs  Interpreter.hs  Lexer.hs  Node.hs  Object.hs  OneOf.hs  Parser.hs  Prelude.hs  Script.hs  TypeCheck.hs  Value.hs
src/Rumor/Compiler/: ExpressionParser.hs  NodeParser.hs  Parser.hs
src/Rumor/Expression/: Parser.hs  Type.hs
src/Rumor/FFI/: Types.hs
src/Rumor/Internal/: Context.hs  Expression.hs  Loose.hs  Node.hs  Types.hs  Unicode.hs  VariableName.hs  VariableType.hs
src/Rumor/Interpreter/: Context.hs  Run.hs  StackFrame.hs  Type.hs
src/Rumor/Node/: Parser.hs  Type.hs
src/Rumor/Object/: Character.hs  ClearFlag.hs  Identifier.hs  Node.hs  Script.hs  Value.hs
src/Rumor/Parser/: Action.hs  Choice.hs  Choose.hs  Clear.hs  Combinator.hs  Common.hs  Control.hs  Dialog.hs  Expression.hs  Identifier.hs  Indent.hs  Indented.hs  Let.hs  Lexeme.hs  Loose.hs  Node.hs  Parse.hs  Set.hs  Surround.hs  Type.hs  Unquoted.hs
src/Rumor/Value/: Type.hs
test/: Main.hs
test-external/: Spec.hs
test-external/Rumor/: ComplexEvaluateTest.hs  ComplexSimplifyTest.hs
test-external/Rumor/Compiler/: DialogParserTest.hs  Helper.hs  NodesParserTest.hs  SectionParserTest.hs
test-external/Rumor/Interpreter/: Helper.hs  RunTest.hs
test-internal/: Spec.hs
test-internal/Rumor/: Helper.hs
test-internal/Rumor/Compiler/: BooleanParserTest.hs  DialogParserTest.hs  Helper.hs  NodesParserTest.hs  NumberParserTest.hs  SectionParserTest.hs  TextParserTest.hs
test-internal/Rumor/Expression/: BooleanParserTest.hs  EvaluateTest.hs  Helper.hs  NumberParserTest.hs  SimplifyTest.hs  TextParserTest.hs
test-internal/Rumor/Node/: DialogParserTest.hs  Helper.hs  NodesParserTest.hs  SectionTest.hs
