cabal-version: 2.4
name: rumor
version: 0.1.0.0
synopsis: An event-sourced narrative scripting language.
description:
  A flexible narrative scripting language and virtual machine that can be used
  for writing a wide range of dialog types and navigating them with time travel
  capabilities.
bug-reports: https://github.com/exodrifter/unity-rumor/issues
license: MIT
author: Ava Pek
maintainer: code@exodrifter.space
copyright: 2023 Ava Pek
category: Video Games
extra-source-files: CHANGELOG.md

executable rumor
  hs-source-dirs: app
  main-is: Main.hs
  -- other-modules:

  default-language:
    Haskell2010
  -- other-extensions:
  build-depends:
    base ^>=4.17.2.0
