cabal-version: 2.4
name: rumor
version: 0.1.0.0
synopsis: An event-sourced narrative scripting language.
description:
  A flexible narrative scripting language and virtual machine that can be used
  for writing a wide range of dialog types and navigating them with time travel
  capabilities.
bug-reports: https://github.com/exodrifter/unity-rumor/issues
license: MIT
author: Ava Pek
maintainer: code@exodrifter.space
copyright: 2023 Ava Pek
category: Video Games
extra-source-files: CHANGELOG.md
build-type: Custom

custom-setup
 setup-depends:
   base >= 4 && <5,
   cabal-doctest >= 1 && <1.1

library
  hs-source-dirs: src
  exposed-modules:
    Rumor,
    Rumor.Internal.Types
    Rumor.Parser,
    Rumor.Parser.Common,
    Rumor.Parser.Identifier,
    Rumor.Parser.Lexeme,
    Rumor.Parser.Surround

  default-language:
    Haskell2010
  default-extensions:
    BlockArguments,
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror

  build-depends:
    base ^>=4.17.2.0,
    megaparsec,
    parsers,
    scientific,
    text

test-suite test-rumor
  type: exitcode-stdio-1.0

  hs-source-dirs: test
  main-is: Main.hs

  default-language:
    Haskell2010
  default-extensions:
    BlockArguments,
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror

  build-depends:
    base ^>=4.17.2.0,
    HUnit,
    rumor

test-suite doctests
  type: exitcode-stdio-1.0

  hs-source-dirs: doctests
  main-is: Main.hs

  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror

  build-depends:
    base ^>=4.17.2.0,
    doctest
